Made the URL fully customizable to be compatible with on-premise solutions as well as Atlassian-hosted ones.

--- a/app.json
+++ b/app.json
@@ -13,11 +13,11 @@
     "JIRA_PASSWORD": {
       "description": "The password for your JIRA user."
     },
-    "JIRA_SUBDOMAIN": {
-      "description": "The name of your JIRA subdomain, as it appears in the URL."
+    "JIRA_URL": {
+      "description": "The URL to access your JIRA installation (e.g. https://mycompany.com OR https://mycompany.atlassian.net)."
     },
     "JIRA_PROJECT": {
-      "description": "The project that you would like the ticket created in JIRA.  This field is the prefix for the project (e.g. 'SUP')"
+      "description": "The project that you would like the ticket created in JIRA.  This field is the prefix for the project (e.g. 'SUP')."
     },
     "JIRA_ISSUE_TYPE": {
       "description": "The type of issue that you'd like created within JIRA (e.g. Bug, Deliverable, etc...)."
